# agenticworkflow_GHCP

./: .gitignore  Makefile  README.md  planning.md  pyproject.toml  requirements.txt
.github/agents/: backend.agent.md  baseline-agent.agent.md  my-agent.agent.md  planning.agent.md  planningAgent.agent.md  testing.agent.md  uiux-agent.agent.md  uiux.agent.md
.github/workflows/: create-backend-issue.yml  create-uiux-issue.yml  mainworkflow.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: auth.py  main.py  models.py  ui.py
backend/app/core/: config.py
backend/app/models/: auth.py  item.py
backend/app/routers/: auth.py  items.py
backend/app/services/: __init__.py  auth_service.py  item_service.py
backend/tests/: test_auth.py  test_models.py
frontend/: README.md  app.js  index.html  main.py  pyproject.toml  style.css  ui.py
frontend/app/: main.py  pages.py
frontend/app/core/: config.py
frontend/app/models/: auth.py
frontend/app/services/: auth_service.py
planned/: plan.md
