[project]
name = "auth-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "fastui",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
