[project]
name = "auth-backend"
version = "0.1.0"
description = "FastAPI backend for authentication flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.29.0",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
