[project]
name = "auth-service"
version = "0.1.0"
description = "Basic authentication service built with FastAPI and FastUI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "fastui>=0.6.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
