[project]
name = "frontend"
version = "0.1.0"
description = "FastUI frontend for the agentic workflow application"
requires-python = ">=3.11"
dependencies = [
    "fastui>=0.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.1.0",
]
