[project]
name = "auth-frontend"
version = "0.1.0"
description = "FastUI frontend for authentication flow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "fastui>=0.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
