[project]
name = "auth-frontend"
version = "0.1.0"
description = "FastUI login frontend for the authentication app"
requires-python = ">=3.11"
dependencies = [
    "fastui>=0.6",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
